# swarmwright

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: docker-publish.yml
app/: __init__.py  config.py  db.py  scheduler.py
app/api/: __init__.py  agents.py  auth.py  callers.py  chat.py  events.py  files.py  health.py  knowledge.py  runs.py  settings.py  skills_api.py  stream.py  swarms.py  topology.py  triggers.py  users.py  workspaces.py
app/builtin_skills/: add_agent_to_swarm.py  add_agent_to_swarm.yaml  attach_file.py  attach_file.yaml  create_skill.py  create_skill.yaml  create_swarm.py  create_swarm.yaml  create_workspace.py  create_workspace.yaml  delete_swarm_file.py  delete_swarm_file.yaml  draft_constitution.py  draft_constitution.yaml  edit_skill.py  edit_skill.yaml  http_get.py  (+51 more)
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: CLAUDE.md  PHASE_1_BACKEND.md  PHASE_2_MODULES.md  PHASE_3_INTERFACE.md  PHASE_4_EXAMPLE_BUNDLE.md  PHASE_5_FRONTEND_PLAN.md  PHASE_5_SETTINGS.md  PHASE_6_HUMAN_IN_LOOP.md  PROJECT_STRUCTURE.md  README.md  Swarm GUI Wireframe.html  logphase1.md  logphase2.md  logphase3.md  logphase5.md  logphase6.md  swarmwright_logo_animated.html  swarmwright_logo_v3_clean.html
landingpage_swarmwright/: app.js  docs.html  index.html  style.css
migrations/: env.py
tests/: conftest.py  test_api.py  test_callers_api.py  test_heartbeat.py  test_hierarchy.py  test_llm.py  test_registry.py  test_resolver.py  test_runtime.py  test_secrets.py  test_settings.py  test_skill_runner.py  test_triggers.py
(+130 files in other folders)
