[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmwright"
version = "0.1.0"
description = "Containerized multi-agent swarm platform"
requires-python = ">=3.12"
dependencies = [
    # HTTP
    "flask>=3.0,<4",
    "gunicorn>=21,<22",
    "flask-cors>=4.0,<5",

    # ORM + migrations
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",

    # Scheduling
    "apscheduler>=3.10,<4",

    # Validation
    "pydantic>=2.6,<3",

    # LLM providers
    "anthropic>=0.25,<1",
    "openai>=1.20,<2",

    # Encryption
    "cryptography>=42,<43",

    # Filesystem watching (Phase 2 registry)
    "watchdog>=4.0,<5",

    # YAML parsing (frontmatter)
    "python-frontmatter>=1.1,<2",
    "pyyaml>=6.0,<7",

    # JSON Schema validation (skill schemas)
    "jsonschema>=4.21,<5",

    # File parsing
    "pdfplumber>=0.11,<1",
    "openpyxl>=3.1,<4",

    # Utilities
    "python-dotenv>=1.0,<2",

    # On the default skill allowlist (docs/PHASE_5_SETTINGS.md:225). Skills
    # may declare it in `allowed_packages` so it must be importable in the
    # container.
    "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-flask>=1.3,<2",
    "httpx>=0.27,<1",         # test client
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
